--- a/past-events.html
+++ b/past-events.html
@@ -159,7 +159,7 @@
                 </div>
               </div>
             </div>
-            <div class="card" >
+            <div class="card" id="ultima-card">
               <img src="./img/Music_Concert.jpg" class="card-img-top" alt="Music_Concert">
               <div class="card-body">
                 <h5 class="card-title">Music Concert</h5>
