--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -123,12 +123,11 @@
             </div>
           </nav>
         </div>
-          </nav>
         </div>
           </div>
         </div>
       </div>
-        </div>
+
       </aside>
       <!-- cards -->
       <section class="container-fluid contenedor-card">
@@ -167,7 +166,7 @@
                 </div>
               </div>
             </div>
-            <div class="card" >
+            <div class="card" id="ultima-card" >
               <img src="./img/Music_Concert.jpg" class="card-img-top" alt="Music_Concert">
               <div class="card-body">
                 <h5 class="card-title">Music Concert</h5>
@@ -197,7 +196,6 @@
       </div>
       <p>FE04-TN</p>
     </footer>
-    </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
