--- a/contact.html
+++ b/contact.html
@@ -11,47 +11,40 @@
 </head>
 <body>
     <header>
-        <!-- barra de navegacion y logo -->
+       <!-- barra de navegacion y logo -->
+       <div class="container-fluid">
+       <nav class="navbar navbar-expand-lg bg-body-tertiary nav-y-logo">
+        <div class="izquierda">
+          <img src="./img/Logo-Amazing-Events.png" alt="Logo">
+        </div>
+        <div class="derecha">
         <div class="container-fluid">
-          <div class="row">
-            <div class="col">
-            <div class="nav-y-logo">
-              <div class="izquierda">
-                <img src="./img/Logo-Amazing-Events.png" alt="Logo">
-            </div>
-              <div class="derecha">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                  <div class="container-fluid">
-                    <a class="navbar-brand" style="color:rgb(194, 165, 213)" href="./index.html">Contact</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                      <ul class="navbar-nav">
-                        <li class="nav-item">
-                          <a class="nav-link "  aria-current="page" href="./index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="./upcoming-events.html">Upcoming Events</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="./past-events.html">Past Events</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link active" href="./contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="./stats.html">Stats</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </nav>
-            </div>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <a class="nav-link"  href="./index.html">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./upcoming-events.html">Upcoming Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./past-events.html">Past Events</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link active"  aria-current="page"href="./contact.html">Contact</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="./stats.html">Stats</a>
+              </li>
+            </ul>
           </div>
         </div>
-          </div>
         </div>
+      </nav>
+    </div>
       <!-- titulo de la pagina con las flechas para ir a las otras paginas -->
       <div class="container-fluid">
         <div class="page-title">
@@ -81,7 +74,7 @@
           </div>
           <div class="mb-3">
             <label for="exampleFormControlTextarea1" class="form-label">Message: </label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="5"></textarea>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="10"></textarea>
           </div>
         </div>
     </main>
