--- a/stats.html
+++ b/stats.html
@@ -11,47 +11,41 @@
 </head>
 <body>
     <header>
-        <!-- barra de navegacion y logo -->
-        <div class="container-fluid">
-          <div class="row">
-            <div class="col">
-            <div class="nav-y-logo">
-              <div class="izquierda">
-                <img src="./img/Logo-Amazing-Events.png" alt="Logo">
-            </div>
-              <div class="derecha">
-                <nav class="navbar navbar-expand-lg bg-body-tertiary">
-                  <div class="container-fluid">
-                    <a class="navbar-brand" style="color:rgb(194, 165, 213)" href="./index.html">Stats</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                      <span class="navbar-toggler-icon"></span>
-                    </button>
-                    <div class="collapse navbar-collapse" id="navbarNav">
-                      <ul class="navbar-nav">
-                        <li class="nav-item">
-                          <a class="nav-link"  aria-current="page" href="./index.html">Home</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="./upcoming-events.html">Upcoming Events</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="./past-events.html">Past Events</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link" href="./contact.html">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                          <a class="nav-link active" href="./stats.html">Stats</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </nav>
+       <!-- barra de navegacion y logo -->
+       <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg bg-body-tertiary nav-y-logo">
+          <div class="izquierda">
+            <img src="./img/Logo-Amazing-Events.png" alt="Logo">
+          </div>
+          <div class="derecha">
+          <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link"  href="./index.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./upcoming-events.html">Upcoming Events</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./past-events.html">Past Events</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="./contact.html">Contact</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="./stats.html">Stats</a>
+                </li>
+              </ul>
             </div>
           </div>
-        </div>
           </div>
-        </div>
+        </nav>
+      </div>
+    <!-- titulo -->
       <div class="container-fluid">
         <div class="row">
           <div class="col-12">
