--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
       <section class="container-fluid contenedor-card">
         <div class="row">
           <div class="contenedor-4-cards">
-            <div class="col-12 col-md-6 col-xl-4  card ">
+            <!-- <div class="col-12 col-md-6 col-xl-4  card ">
               <img src="./img/Cinema.jpg" class="card-img-top" alt="cinema">
               <div class="card-body">
                 <h5 class="card-title">Cinema</h5>
@@ -163,7 +163,7 @@
                   <a href="./details.html" class="btn btn-primary">Learn more</a>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </section>
