--- a/past-events.html
+++ b/past-events.html
@@ -45,7 +45,7 @@
               </div>
             </nav>
           </div>
-
+          <!-- titulo de la pagina  -->
       <div class="container-fluid">
         <div class="page-title">
           <a href="./upcoming-events.html" >
@@ -120,18 +120,18 @@
       <section class="container-fluid contenedor-card">
         <div class="row">
           <div class="col-12 contenedor-4-cards">
-            <div class="card" >
+              <!--  <div class="col-12 col-md-6 col-xl-4  card ">
               <img src="./img/Cinema.jpg" class="card-img-top" alt="cinema">
               <div class="card-body">
-                <h5 class="card-title">Cinema</h5>
-                <p class="card-text">You can throw your event at a cinema, displaying the movie of your choice.</p>
+                <h5 class="card-title">Name</h5>
+                <p class="card-text">Description</p>
                 <div class="fila-inferior-card">
-                  <p>Price:<br> contact us</p>
+                  <p>Price:<br> price</p>
                   <a href="./details.html" class="btn btn-primary">Learn more</a>
                 </div>
               </div>
-            </div>
-            <div class="card" >
+            </div> 
+            <div class="col-12 col-md-6 col-xl-4  card ">
               <img src="./img/Costume_Party.jpg" class="card-img-top" alt="Costume_Party">
               <div class="card-body">
                 <h5 class="card-title">Costume Party</h5>
@@ -141,8 +141,8 @@
                   <a href="./details.html" class="btn btn-primary">Learn more</a>
                 </div>
               </div>
-            </div>
-            <div class="card">
+            </div> 
+            <div class="col-12 col-md-6 col-xl-4  card ">
               <img src="./img/Food_Fair.jpg" class="card-img-top" alt="Food_Fair">
               <div class="card-body">
                 <h5 class="card-title">Food Fair</h5>
@@ -153,7 +153,7 @@
                 </div>
               </div>
             </div>
-            <div class="card" id="ultima-card">
+            <div class="col-12 col-md-6 col-xl-4  card ">
               <img src="./img/Music_Concert.jpg" class="card-img-top" alt="Music_Concert">
               <div class="card-body">
                 <h5 class="card-title">Music Concert</h5>
@@ -164,7 +164,7 @@
                 </div>
               </div>
             </div>
-          </div>
+          </div> -->
         </div>
 
       </section>
