--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -127,7 +127,7 @@
       <section class="container-fluid contenedor-card">
         <div class="row">
           <div class="col-12 contenedor-4-cards">
-            <div class="card" >
+            <!-- <div class="col-12 col-md-6 col-xl-4  card ">
               <img src="./img/Cinema.jpg" class="card-img-top" alt="cinema">
               <div class="card-body">
                 <h5 class="card-title">Cinema</h5>
@@ -138,7 +138,7 @@
                 </div>
               </div>
             </div>
-            <div class="card" >
+            <div class="col-12 col-md-6 col-xl-4  card ">
               <img src="./img/Costume_Party.jpg" class="card-img-top" alt="Costume_Party">
               <div class="card-body">
                 <h5 class="card-title">Costume Party</h5>
@@ -149,7 +149,7 @@
                 </div>
               </div>
             </div>
-            <div class="card">
+            <div class="col-12 col-md-6 col-xl-4  card ">
               <img src="./img/Food_Fair.jpg" class="card-img-top" alt="Food_Fair">
               <div class="card-body">
                 <h5 class="card-title">Food Fair</h5>
@@ -160,7 +160,7 @@
                 </div>
               </div>
             </div>
-            <div class="card" id="ultima-card" >
+            <div class="col-12 col-md-6 col-xl-4  card " >
               <img src="./img/Music_Concert.jpg" class="card-img-top" alt="Music_Concert">
               <div class="card-body">
                 <h5 class="card-title">Music Concert</h5>
@@ -170,7 +170,7 @@
                   <a href="./details.html" class="btn btn-primary">Learn more</a>
                 </div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
 
