avanzando en task 3

--- a/index.html
+++ b/index.html
@@ -66,14 +66,15 @@
         <div class="container-fluid">
 <!-- checkbox categorias -->
         <div class="checkbox">
-          <div class="row">
-          <div class="col-6 col-md-4 col-xl-2 form-check">
+          <div class="row" >
+            <div class="contenedorCategorias">
+          <!-- <div class="col-6 col-md-4 col-xl-2 form-check">
             <input class="form-check-input" type="checkbox" value="categoria1" id="flexCheckIndeterminate1">
             <label class="form-check-label" for="flexCheckIndeterminate1">
               Category
             </label>
-          </div>
-          <div class="col-6 col-md-4 col-xl-2 form-check">
+          </div> -->
+          <!-- <div class="col-6 col-md-4 col-xl-2 form-check">
             <input class="form-check-input" type="checkbox" value="categoria2" id="flexCheckIndeterminate2">
             <label class="form-check-label" for="flexCheckIndeterminate2">
               Category
@@ -96,7 +97,7 @@
             <label class="form-check-label" for="flexCheckIndeterminate5">
               Category
             </label>
-          </div>
+          </div> -->
         </div>
         <!-- search -->
         <div class="search">
@@ -114,6 +115,7 @@
           </nav>
         </div>
             </div>
+        </div>
         </div>
       </aside>
       <!-- cards -->
