--- a/details.html
+++ b/details.html
@@ -51,7 +51,7 @@
     </header>
     <!-- contenedor card para detalles -->
     <main>
-        <div class="container-fluid contenedor-detalles">
+        <!-- <div class="container-fluid contenedor-detalles">
             <div class="card mb-3" >
                 <div class="row g-0">
                   <div class="col-12 col-md-8 col-xl-6">
@@ -66,7 +66,7 @@
                   </div>
                 </div>
               </div>
-        </div>
+        </div> -->
     </main>
     <footer>
       <div class="social">
@@ -82,6 +82,9 @@
       </div>
       <p>FE04-TN</p>
     </footer>
+
+    <script src="data.js"></script>
+    <script src="js/details.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
