--- a/index.html
+++ b/index.html
@@ -68,41 +68,13 @@
         <div class="checkbox">
           <div class="row" >
             <div class="contenedorCategorias">
-          <!-- <div class="col-6 col-md-4 col-xl-2 form-check">
-            <input class="form-check-input" type="checkbox" value="categoria1" id="flexCheckIndeterminate1">
-            <label class="form-check-label" for="flexCheckIndeterminate1">
-              Category
-            </label>
-          </div> -->
-          <!-- <div class="col-6 col-md-4 col-xl-2 form-check">
-            <input class="form-check-input" type="checkbox" value="categoria2" id="flexCheckIndeterminate2">
-            <label class="form-check-label" for="flexCheckIndeterminate2">
-              Category
-            </label>
+            </div>
           </div>
-          <div class="col-6 col-md-4 col-xl-2 form-check">
-            <input class="form-check-input" type="checkbox" value="categoria3" id="flexCheckIndeterminate3">
-            <label class="form-check-label" for="flexCheckIndeterminate3">
-              Category
-            </label>
-          </div>
-          <div class="col-6 col-md-4 col-xl-2 form-check">
-            <input class="form-check-input" type="checkbox" value="categoria4" id="flexCheckIndeterminate4">
-            <label class="form-check-label" for="flexCheckIndeterminate4">
-              Category
-            </label>
-          </div>
-          <div class="col-6 col-md-4 col-xl-2 form-check">
-            <input class="form-check-input" type="checkbox" value="categoria5" id="flexCheckIndeterminate5">
-            <label class="form-check-label" for="flexCheckIndeterminate5">
-              Category
-            </label>
-          </div> -->
         </div>
         <!-- search -->
         <div class="search">
           <nav class="navbar bg-body-tertiary">
-            <div class="container-fluid">
+            <div class="container-fluid" id="contenedorSearch">
               <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
                 <button class="btn btn-outline-success" type="submit">
