--- a/upcoming-events.html
+++ b/upcoming-events.html
@@ -71,35 +71,38 @@
 <!-- checkbox categorias -->
         <div class="checkbox">
           <div class="row">
-          <div class="col-6 col-md-2 form-check">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate1">
-            <label class="form-check-label" for="flexCheckIndeterminate1">
-              Category
-            </label>
-          </div>
-          <div class="col-6 col-md-2 form-check">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate2">
-            <label class="form-check-label" for="flexCheckIndeterminate2">
-              Category
-            </label>
-          </div>
-          <div class="col-6 col-md-2 form-check">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate3">
-            <label class="form-check-label" for="flexCheckIndeterminate3">
-              Category
-            </label>
-          </div>
-          <div class="col-6 col-md-2 form-check">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate4">
-            <label class="form-check-label" for="flexCheckIndeterminate4">
-              Category
-            </label>
-          </div>
-          <div class="col-6 col-md-2 form-check">
-            <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate5">
-            <label class="form-check-label" for="flexCheckIndeterminate5">
-              Category
-            </label>
+            <div class="contenedorCategorias">
+              <!-- <div class="col-6 col-md-2 form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate1">
+                <label class="form-check-label" for="flexCheckIndeterminate1">
+                  Category
+                </label>
+              </div>
+              <div class="col-6 col-md-2 form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate2">
+                <label class="form-check-label" for="flexCheckIndeterminate2">
+                  Category
+                </label>
+              </div>
+              <div class="col-6 col-md-2 form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate3">
+                <label class="form-check-label" for="flexCheckIndeterminate3">
+                  Category
+                </label>
+              </div>
+              <div class="col-6 col-md-2 form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate4">
+                <label class="form-check-label" for="flexCheckIndeterminate4">
+                  Category
+                </label>
+              </div>
+              <div class="col-6 col-md-2 form-check">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckIndeterminate5">
+                <label class="form-check-label" for="flexCheckIndeterminate5">
+                  Category
+                </label>
+              </div> -->
+            </div>
           </div>
         </div>
         <!-- search -->
@@ -126,7 +129,7 @@
       <!-- cards -->
       <section class="container-fluid contenedor-card">
         <div class="row">
-          <div class="col-12 contenedor-4-cards">
+          <div class="col-12 contenedor-4-cards" id="contenedorPrincipal">
             <!-- <div class="col-12 col-md-6 col-xl-4  card ">
               <img src="./img/Cinema.jpg" class="card-img-top" alt="cinema">
               <div class="card-body">
@@ -192,6 +195,7 @@
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="data.js"></script>
+    <script src="./js/base.js"></script>
     <script src="js/upcoming.js"></script>
 </body>
 </html>
