--- a/stats.html
+++ b/stats.html
@@ -76,8 +76,8 @@
                             <th colspan="3" scope="col">Events statistics</th>
                           </tr>
                         </thead>
-                        <tbody>
-                          <tr>
+                        <tbody id="primeraTabla">
+                          <!-- <tr>
                             <td class="table table-success  primera-fila">Events with the highest porcentage of attendance</td>
                             <td class="primera-fila">Events with the lowest porcentage of attendance</td>
                             <td class="primera-fila">Events with the larger capacity</td>
@@ -86,7 +86,7 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                          </tr>
+                          </tr> -->
                         </tbody>
                       </table>
                       <table class="table table-success ">
@@ -115,7 +115,7 @@
                             <td></td>
                             <td></td>
                             <td></td>
-                          </tr>
+                          </tr> 
                         </tbody>
                       </table>
                       <table class="table table-success ">
@@ -176,5 +176,6 @@
       <p>FE04-TN</p>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
+    <script src="./js/stats.js"></script>
 </body>
 </html>
